# hotel

./: .coverage  .dockerignore  .env  .env.example  .env.prod  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  schema.yml
.github/workflows/: ci.yml
app/config/: settings.py  urls.py
app/hotel/: models.py  repositories.py  serializers.py  services.py  urls.py  validators.py  views.py
app/hotel/migrations/: 0001_initial.py  0002_alter_hotelroom_id_roombooking.py  0003_rename_room_roombooking_room_id.py  0004_rename_room_id_roombooking_room.py  0005_alter_roombooking_room_and_more.py  0006_hotelroom_room_number.py  0007_alter_hotelroom_id.py  0008_remove_hotelroom_room_number.py  0009_hotelroom_room_number_alter_hotelroom_id.py  0010_rename_id_roombooking_booking_id_remove_hotelroom_id_and_more.py  0011_rename_roombooking_booking_rename_hotelroom_room.py  0012_hotel_rename_booking_id_booking_id_and_more.py  0013_room_room_number_alter_room_id.py
app/hotel/repositories/: __init__.py  booking_repository.py  hotel_repository.py  room_repository.py
app/hotel/serializers/: __init__.py  booking_serializer.py  hotel_serializer.py  room_serializer.py
app/hotel/services/: __init__.py  booking_service.py  hotel_service.py  room_service.py
app/hotel/views/: __init__.py  booking_views.py  hotel_views.py  room_views.py
tests/hotel/: conftest.py  test_data.py  test_room_service.py  test_services.py
tests/hotel/booking_service/: booking_test_data.py  conftest.py  test_booking_service.py
tests/hotel/hotel_service/: conftest.py  (+2 more)
(+2 files in other folders)
